--- a/GreenPlatform/src/main/resources/templates/plate/yhgl/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/yhgl/index.html
@@ -36,6 +36,10 @@
                 <div class="col-md-12 searchForm">
                     <form class="form-inline">
                         <div class="form-group">
+                            <label for="cRylbSearch">人员类别：</label>
+                            <select class="form-control" id="cRylbSearch"></select>
+                        </div>
+                        <div class="form-group">
                             <label for="cUsernameSearch">姓名：</label>
                             <input type="text" class="form-control" id="cUsernameSearch" placeholder="请输入姓名">
                         </div>
