--- a/GreenPlatform/src/main/resources/templates/plate/zhsjgl/index.html
+++ b/GreenPlatform/src/main/resources/templates/plate/zhsjgl/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="/publicFrame/dhtmlx-4.5/skins/web/dhtmlx.css">
     <link rel="stylesheet" href="/publicFrame/dhtmlx-4.5/skins/dhtmlxgrid.css">
-    <link rel="stylesheet" href="/plate/css/yhgl/index.css">
+    <link rel="stylesheet" href="/plateStatic/css/zhsjgl/index.css">
 </head>
 <body>
 <div class="container-fluid plateIndexContainer">
@@ -29,6 +29,7 @@
                 <li role="presentation"><a href="/base/spgl">商品管理</a></li>
                 <li role="presentation"><a href="/base/stgl">收徒管理</a></li>
                 <li role="presentation"><a href="/base/zhsjgl">账户升级管理</a></li>
+                <li role="presentation"><a href="/base/jcdm">基础代码维护</a></li>
             </ul>
         </div>
         <div class="col-md-10 center_main_right">
@@ -156,6 +157,6 @@
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
-<script src="/plate/js/yhgl/index.js"></script>
+<script src="/plateStatic/js/zhsjgl/index.js"></script>
 </body>
 </html>
