--- a/GreenPlatform/src/main/resources/templates/system/index备份.html
+++ b/GreenPlatform/src/main/resources/templates/system/index备份.html
@@ -176,7 +176,7 @@
                 <!--<div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="single-package">
                         <div class="package-image">
-                            <a href="#"><img src="/publicImg/system/2.jpg" alt=""></a>
+                            <a href="#"><img src="/publicImg/systemStatic/2.jpg" alt=""></a>
                         </div>
                         <div class="package-content">
                             <h3><a href="" title="">白刺 – All Stunning Places</a></h3>
@@ -195,7 +195,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="single-package">
                         <div class="package-image">
-                            <a href="#"><img src="/publicImg/system/3.jpg" alt="">
+                            <a href="#"><img src="/publicImg/systemStatic/3.jpg" alt="">
                             </a>
                         </div>
                         <div class="package-content">
@@ -215,7 +215,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="single-package">
                         <div class="package-image">
-                            <a href="#"><img src="/publicImg/system/4.jpg" alt="">
+                            <a href="#"><img src="/publicImg/systemStatic/4.jpg" alt="">
                             </a>
                         </div>
                         <div class="package-content">
@@ -235,7 +235,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="single-package">
                         <div class="package-image">
-                            <a href="#"><img src="/publicImg/system/5.jpg" alt="">
+                            <a href="#"><img src="/publicImg/systemStatic/5.jpg" alt="">
                             </a>
                         </div>
                         <div class="package-content">
@@ -255,7 +255,7 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                     <div class="single-package">
                         <div class="package-image">
-                            <a href="#"><img src="/publicImg/system/6.jpg" alt="">
+                            <a href="#"><img src="/publicImg/systemStatic/6.jpg" alt="">
                             </a>
                         </div>
                         <div class="package-content">
